--- a/src/_config.yml
+++ b/src/_config.yml
@@ -11,7 +11,7 @@ gems: [jekyll-seo-tag, jekyll-sitemap, jekyll-paginate]
 paginate: 6
 
 stageurl: "http://localhost:8000/"
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "https://evanrosaportfolio.com/" # the subpath of your site, e.g. /blog
 url: "https://evanrosaportfolio.com" # the base hostname & protocol for your site
 github:username:  evr01
 social:
