--- a/src/_config.yml
+++ b/src/_config.yml
@@ -7,6 +7,10 @@
 
 
 # Site settings
+strict_front_matter: true
+liquid:
+  error_mode: strict
+  
 plugins: [jekyll-seo-tag, jekyll-sitemap, jekyll-paginate]
 paginate: 6
 
