--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "jekyll-foundation-zurb-template",
   "version": "1.0.0",
+  "babel": {
+      "env": {
+          "targets": {
+            "browsers": ["last 2 versions"]
+        }
+      }
+  },
   "description": "Jekyll + the Official ZURB Template for Foundation for Sites.",
   "main": "gulpfile.babel.js",
   "scripts": {
