--- a/src/_config.yml
+++ b/src/_config.yml
@@ -7,10 +7,6 @@
 
 
 # Site settings
-strict_front_matter: true
-liquid:
-  error_mode: strict
-  
 plugins: [jekyll-seo-tag, jekyll-sitemap, jekyll-paginate]
 paginate: 6
 
@@ -33,7 +29,7 @@ social:
 markdown: kramdown
 
 # Assets are being handled by Gulp
-exclude: ['assets', 'vendor']
+exclude: [assets]
 keep_files: [assets]
 
 
